--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.unity.connect.share": "4.2.3",
     "com.unity.ide.rider": "2.0.7",
     "com.unity.ugui": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
